--- a/onyx-ios-helloworld/Base.lproj/Main.storyboard
+++ b/onyx-ios-helloworld/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,27 +18,35 @@
                         <viewControllerLayoutGuide type="bottom" id="7hS-Rq-yJt"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8o1-mt-1De">
                                 <rect key="frame" x="211" y="129" width="100" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="dWX-YI-ntR"/>
+                                    <constraint firstAttribute="width" constant="100" id="vZw-qa-1kC"/>
+                                </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lZq-9w-v74">
                                 <rect key="frame" x="110" y="129" width="100" height="160"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="e3b-1J-0ZW"/>
+                                    <constraint firstAttribute="height" constant="160" id="qbS-Ni-3vK"/>
+                                </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a13-2d-t4q">
                                 <rect key="frame" x="9" y="129" width="100" height="160"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="160" id="Ghx-KS-eN0"/>
-                                    <constraint firstAttribute="width" constant="100" id="J1M-6D-aHB"/>
+                                    <constraint firstAttribute="height" constant="160" id="WxB-WQ-87F"/>
+                                    <constraint firstAttribute="width" constant="100" id="wXr-FZ-BnL"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tYs-BD-wy2">
                                 <rect key="frame" x="0.0" y="518" width="320" height="50"/>
                                 <color key="backgroundColor" red="0.36471922635121817" green="0.63391776704921465" blue="0.24105574949552017" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="iVf-0n-r9Z"/>
+                                    <constraint firstAttribute="height" constant="50" id="qXa-lq-Sxi"/>
                                 </constraints>
                                 <state key="normal" title="Save">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -49,10 +56,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qob-6c-f3l">
-                                <rect key="frame" x="0.0" y="20" width="320" height="50"/>
+                                <rect key="frame" x="0.0" y="28" width="320" height="50"/>
                                 <color key="backgroundColor" red="0.25126218523562943" green="0.57756752255223265" blue="0.82745098039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="RNi-xy-5c8"/>
+                                    <constraint firstAttribute="height" constant="50" id="MJE-it-WDw"/>
                                 </constraints>
                                 <state key="normal" title="Capture">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -64,22 +71,18 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="qob-6c-f3l" firstAttribute="top" secondItem="gYr-r9-aYR" secondAttribute="bottom" id="0kh-jA-oLg"/>
-                            <constraint firstItem="a13-2d-t4q" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-7" id="2na-GC-kAg"/>
-                            <constraint firstItem="qob-6c-f3l" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="80H-Hr-cs4"/>
-                            <constraint firstItem="8o1-mt-1De" firstAttribute="top" secondItem="lZq-9w-v74" secondAttribute="top" id="8cU-Pu-5Lj"/>
-                            <constraint firstItem="7hS-Rq-yJt" firstAttribute="top" secondItem="tYs-BD-wy2" secondAttribute="bottom" constant="99" id="93S-Hy-eJy"/>
-                            <constraint firstItem="a13-2d-t4q" firstAttribute="top" secondItem="qob-6c-f3l" secondAttribute="bottom" constant="59" id="FZz-W7-5FG"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="8o1-mt-1De" secondAttribute="trailing" constant="48" id="Fa8-Vm-sKt"/>
-                            <constraint firstItem="lZq-9w-v74" firstAttribute="leading" secondItem="a13-2d-t4q" secondAttribute="trailing" constant="1" id="H8g-00-uG5"/>
-                            <constraint firstItem="lZq-9w-v74" firstAttribute="centerX" secondItem="qob-6c-f3l" secondAttribute="centerX" id="JPm-oK-gD1"/>
-                            <constraint firstItem="lZq-9w-v74" firstAttribute="bottom" secondItem="a13-2d-t4q" secondAttribute="bottom" id="JiF-f8-Kvd"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="qob-6c-f3l" secondAttribute="trailing" constant="39" id="OHG-XG-rtn"/>
-                            <constraint firstItem="lZq-9w-v74" firstAttribute="top" secondItem="a13-2d-t4q" secondAttribute="top" id="Py5-GK-aKD"/>
-                            <constraint firstItem="tYs-BD-wy2" firstAttribute="trailing" secondItem="qob-6c-f3l" secondAttribute="trailing" id="X4d-hK-jjn"/>
-                            <constraint firstItem="8o1-mt-1De" firstAttribute="leading" secondItem="lZq-9w-v74" secondAttribute="trailing" constant="1" id="YKu-iA-Ey3"/>
-                            <constraint firstItem="8o1-mt-1De" firstAttribute="bottom" secondItem="lZq-9w-v74" secondAttribute="bottom" id="etP-7g-tWP"/>
-                            <constraint firstItem="tYs-BD-wy2" firstAttribute="leading" secondItem="qob-6c-f3l" secondAttribute="leading" id="v1C-76-07t"/>
+                            <constraint firstItem="qob-6c-f3l" firstAttribute="leading" secondItem="tYs-BD-wy2" secondAttribute="leading" id="5Sl-Ie-o7R"/>
+                            <constraint firstItem="qob-6c-f3l" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7MV-kN-tnF"/>
+                            <constraint firstItem="lZq-9w-v74" firstAttribute="top" secondItem="8o1-mt-1De" secondAttribute="top" id="GlE-2S-SJe"/>
+                            <constraint firstItem="qob-6c-f3l" firstAttribute="top" secondItem="gYr-r9-aYR" secondAttribute="bottom" constant="8" symbolic="YES" id="Hra-db-OTt"/>
+                            <constraint firstItem="a13-2d-t4q" firstAttribute="top" secondItem="lZq-9w-v74" secondAttribute="top" id="Ior-RH-uHN"/>
+                            <constraint firstItem="qob-6c-f3l" firstAttribute="centerX" secondItem="lZq-9w-v74" secondAttribute="centerX" id="JoJ-zI-Qmn"/>
+                            <constraint firstItem="qob-6c-f3l" firstAttribute="trailing" secondItem="tYs-BD-wy2" secondAttribute="trailing" id="K7y-jq-JvT"/>
+                            <constraint firstItem="lZq-9w-v74" firstAttribute="leading" secondItem="a13-2d-t4q" secondAttribute="trailing" constant="1" id="Rf8-XO-y3Q"/>
+                            <constraint firstAttribute="trailing" secondItem="qob-6c-f3l" secondAttribute="trailing" id="UkG-1A-vVP"/>
+                            <constraint firstItem="a13-2d-t4q" firstAttribute="top" secondItem="qob-6c-f3l" secondAttribute="bottom" constant="51" id="iNP-RG-kft"/>
+                            <constraint firstItem="tYs-BD-wy2" firstAttribute="bottom" secondItem="7hS-Rq-yJt" secondAttribute="top" id="jwR-Cc-qc2"/>
+                            <constraint firstItem="8o1-mt-1De" firstAttribute="leading" secondItem="lZq-9w-v74" secondAttribute="trailing" constant="1" id="o93-6O-JBb"/>
                         </constraints>
                     </view>
                     <connections>
@@ -96,6 +99,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
+        <simulatedScreenMetrics key="destination" type="retina4_0.fullscreen"/>
     </simulatedMetricsContainer>
 </document>
